# bevy_peacock

./: .gitignore  Cargo.toml  README.md
crates/bevy_peacock_derive/: Cargo.toml
crates/bevy_peacock_derive/src/: lib.rs
crates/bevy_peacock_style/: Cargo.toml
crates/bevy_peacock_style/src/: builder.rs  computed.rs  lib.rs  selector.rs  selector_parser.rs  style.rs  style_parser.rs  style_props.rs  transition.rs
examples/: basic.rs  styles.pss  styles_compiled.pss
src/: animate.rs  classes.rs  computed.rs  cursor.rs  lib.rs  plugin.rs  selector_matcher.rs  style_handle.rs  style_props.rs  style_tuple.rs  update.rs  update_computed.rs
