[package]
name = "bevy_peacock"
version = "0.1.0"
edition = "2021"

[features]
bevy_mod_picking = ["dep:bevy_mod_picking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_mod_picking = { version = "0.17.0", optional = true }
impl-trait-for-tuples = "0.2.2"
winnow = "0.5.34"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
