[package]
name = "bevy_peacock"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/bevy_peacock_derive",
    "crates/bevy_peacock_style",
]

[features]
bevy_mod_picking = ["dep:bevy_mod_picking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_peacock_style = { path = "crates/bevy_peacock_style" }
bevy_peacock_derive = { path = "crates/bevy_peacock_derive" }
bevy_mod_picking = { version = "0.17.0", optional = true }
impl-trait-for-tuples = "0.2.2"
winnow = "0.5.34"
static_init = "1.0.3"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
